fix animation on mobile

--- a/css/home-page.css
+++ b/css/home-page.css
@@ -5,6 +5,9 @@ body {
     animation-name: appear;
     animation-duration: 1s;
     transform: translateY(0);
+    -webkit-animation-name: appear;
+    -webkit-animation-duration: 1s;
+    -webkit-transform: translateY(0);
 }
 .pop-up {
     animation-name: popup;
@@ -12,14 +15,43 @@ body {
     animation-delay: 0.5s;
     opacity: 0;
     animation-fill-mode: forwards;
+    -webkit-animation-name: popup;
+    -webkit-animation-duration: 1.5s;
+    -webkit-animation-delay: 0.5s;
+    -webkit-animation-fill-mode: forwards;
+
+}
+.pop {
+    animation-name: popup;
+    animation-duration: 1.2s;
+    animation-delay: 0.9s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: popup;
+    -webkit-animation-duration: 1.2s;
+    -webkit-animation-delay: 0.9s;
+    -webkit-animation-fill-mode: forwards;
 }
 .pop-down {
     animation-name: popdown;
     animation-duration: 1.2s;
-    animation-delay: 0.8s;
+    animation-delay: 0.9s;
     opacity: 0;
-    transform: translateY(0px);
     animation-fill-mode: forwards;
+    -webkit-animation-name: popdown;
+    -webkit-animation-duration: 1.2s;
+    -webkit-animation-delay: 0.9s;
+    -webkit-animation-fill-mode: forwards;
+}
+@keyframes popup {
+    from {
+        opacity: 0;
+        transform: scale(1) translateY(100px);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+    }
 }
 @media (max-width: 2000px) {
     .pop-up {
@@ -42,19 +74,12 @@ body {
         transform: translateY(0) */
     }
 }
-@keyframes popup {
-    from {
-        /* opacity: 0; */
-        transform: scale(1) translateY(100px)
-    }
-    to {
-        opacity: 1;
-    }
-}
+
 @keyframes popup2 {
     from {
         /* opacity: 0; */
-        transform: scale(0.8) translateY(100px)
+        transform: scale(0.8) translateY(100px);
+        -webkit-transform: scale(0.8) translateY(100px);
     }
     to {
         opacity: 1;
@@ -63,7 +88,8 @@ body {
 @keyframes popup3 {
     from {
         /* opacity: 0; */
-        transform: scale(0.7) translateY(100px)
+        transform: scale(0.7) translateY(100px);
+        -webkit-transform: scale(0.7) translateY(100px);
     }
     to {
         opacity: 1;
